--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -176,6 +176,13 @@ jobs:
     needs: [nginx_deploy]
     runs-on: ubuntu-latest
     steps:
+      - name: Copy docker-compose file to server
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
+          scp ./docker-compose.prod.yaml ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:/home/benoit/www/skills2025/
       - name : docker cmd
         run: |
           eval $(ssh-agent -s)
