test github actions build&deploy #43

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -176,6 +176,8 @@ jobs:
     needs: [nginx_deploy]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Copy docker-compose file to server
         run: |
           eval $(ssh-agent -s)
