test github actions build&deploy #45

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,13 +1,3 @@
-
-# services:
-#   frontend:
-#     image: myregistry/frontend:latest
-#     ...
-
-#   backend:
-#     image: myregistry/backend:latest
-#     ...
-
 services:
   api:
     # container_name: skills2025_api
@@ -28,25 +18,25 @@ services:
     depends_on:
       - mysql
 
-  front:
+  # front:
   #   container_name: skills2025_front
-    image: skills2025/front:latest
+    # image: skills2025/front:latest
   #   build:
   #     context: ./front
   #     dockerfile: ../docker/front/Dockerfile
-    volumes:
-      - ./front:/var/www/front
-    environment:
-      PUID: 1000
-      PGID: 1000
-      NODE_ENV: prod
-  #     VITE_API_URL: https://api.skills2025.local
-  #     SHELL: /bin/ash # Fix chokidar-cli error
-    restart: unless-stopped
-    networks:
-      - bentoweb_network
-    ports:
-      - "3000:3000"
+  #   volumes:
+  #     - ./front:/var/www/front
+  #   environment:
+  #     PUID: 1000
+  #     PGID: 1000
+  #     NODE_ENV: prod
+  # #     VITE_API_URL: https://api.skills2025.local
+  # #     SHELL: /bin/ash # Fix chokidar-cli error
+  #   restart: unless-stopped
+  #   networks:
+  #     - bentoweb_network
+  #   ports:
+  #     - "3000:3000"
 
   nginx:
     image: skills2025-nginx:latest
