--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -162,7 +162,7 @@ jobs:
           ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
-          scp ./docker-compose.prod.yaml ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:/home/benoit/www/skills2025/
+          scp ./docker-compose.prod.yaml ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:/home/${{ secrets.PROD_SSH_USER }}/www/skills2025/
       - name : docker cmd
         run: |
           eval $(ssh-agent -s)
@@ -171,4 +171,4 @@ jobs:
           ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
           ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} \
             docker volume create bentoweb_db_data || true
-            cd /home/benoit/www/skills2025 && docker compose down && docker compose -f docker-compose.prod.yaml up -d
+            cd /home/${{ secrets.PROD_SSH_USER }}/www/skills2025 && docker compose down && docker compose -f docker-compose.prod.yaml up -d
