--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -156,6 +156,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Debug remote directory
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "ls -l /home/${{ secrets.PROD_SSH_USER }}/www && ls -l /home/${{ secrets.PROD_SSH_USER }}/www/skills2025 || true"
       - name: Copy docker-compose file to server
         run: |
           eval $(ssh-agent -s)
