--- a/docker/nginx/Dockerfile-CI
+++ b/docker/nginx/Dockerfile-CI
@@ -3,4 +3,4 @@ FROM nginx:stable
 # RUN echo "upstream php-upstream { server fpm:9000; }" > /etc/nginx/conf.d/upstream.conf
 # RUN usermod -u 1000 www-data
 # COPY /etc/nginx/fastcgi_params /etc/nginx/fastcgi_params
-CMD ["php-fpm", "-R"]
+# CMD ["php-fpm", "-R"]
