test github actions build&deploy #58

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -128,6 +128,7 @@ jobs:
           context: ./nginx
           file: ./docker/nginx/Dockerfile-CI
           push: true
+          no-cache: true
           tags: ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest
   
   nginx_deploy:
