--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -91,9 +91,6 @@ jobs:
           registry: ghcr.io
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      # - name: Pull Docker image
-      #   run: | 
-      #     docker pull ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:latest
       - name: Pull API Docker image on server
         run: |
           eval $(ssh-agent -s)
@@ -128,7 +125,7 @@ jobs:
           context: ./nginx
           file: ./docker/nginx/Dockerfile-CI
           push: true
-          no-cache: true
+          # no-cache: true
           tags: ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest
   
   nginx_deploy:
@@ -140,6 +137,12 @@ jobs:
         uses: actions/checkout@v4
       # - name: Déployer Nginx sur le PS
       #   run: echo "ok"
+      - name: Login GHCR 
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
       - name: Pull Nginx Docker image on server
         run: |
           eval $(ssh-agent -s)
