--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -110,23 +110,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Nginx conf file
+        run: |
+          mv "nginx-prod.conf" "nginx.conf"
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      - name: Nginx conf file
-        run: |
-          mv "nginx-prod.conf" "nginx.conf"
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: ./nginx
           file: ./docker/nginx/Dockerfile-CI
           push: true
-          # no-cache: true
           tags: ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest
+          no-cache: true
   
   nginx_deploy:
     name: Deploy Nginx
