--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -135,16 +135,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # - name: Déployer Nginx sur le PS
-      #   run: echo "ok"
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_TOKEN }}
+      - name: Debug NGINX image tag
+        run: echo "ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest"
       - name: Pull Nginx Docker image on server
         run: |
+          sleep 10
           eval $(ssh-agent -s)
           ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
           mkdir -p ~/.ssh
