--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,7 +1,7 @@
 services:
   api:
     # container_name: skills2025_api
-    image: ghcr.io/bentoweb-fr/skills2025/api
+    image: ghcr.io/bentoweb-fr/skills2025-api:latest
     pull_policy: never
     environment:
       PUID: 1000
@@ -23,28 +23,28 @@ services:
     depends_on:
       - mysql
 
-  # front:
-  #   container_name: skills2025_front
-    # image: skills2025/front:latest
-  #   build:
-  #     context: ./front
-  #     dockerfile: ../docker/front/Dockerfile
-  #   volumes:
-  #     - ./front:/var/www/front
-  #   environment:
-  #     PUID: 1000
-  #     PGID: 1000
-  #     NODE_ENV: prod
-  # #     VITE_API_URL: https://api.skills2025.local
-  # #     SHELL: /bin/ash # Fix chokidar-cli error
-  #   restart: unless-stopped
-  #   networks:
-  #     - bentoweb_network
-  #   ports:
-  #     - "3000:3000"
+  front:
+    container_name: skills2025-front
+    image: ghcr.io/bentoweb-fr/skills2025-front:latest
+    build:
+      context: ./front
+      dockerfile: ../docker/front/Dockerfile
+    volumes:
+      - ./front:/var/www/front
+    environment:
+      PUID: 1000
+      PGID: 1000
+      NODE_ENV: prod
+  #     VITE_API_URL: https://api.skills2025.local
+  #     SHELL: /bin/ash # Fix chokidar-cli error
+    restart: unless-stopped
+    networks:
+      - bentoweb_network
+    ports:
+      - "3000:3000"
 
   nginx:
-    image: ghcr.io/bentoweb-fr/skills2025-nginx
+    image: ghcr.io/bentoweb-fr/skills2025-nginx:latest
     pull_policy: never
     # image: ghcr.io/${REGISTRY_USER}/skills2025-nginx:latest
     # container_name: skills2025_nginx
