--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Nginx conf file
         run: |
-          mv "nginx-prod.conf" "nginx.conf"
+          mv ./nginx/nginx-prod.conf ./nginx/nginx.conf
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
@@ -146,7 +146,7 @@ jobs:
         run: echo "ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest"
       - name: Pull Nginx Docker image on server
         run: |
-          sleep 10
+          # sleep 10
           eval $(ssh-agent -s)
           ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
           mkdir -p ~/.ssh
