--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Nginx conf file
         run: |
-          mv ./nginx/nginx-prod.conf ./nginx/nginx.conf
+          mv nginx-prod.conf nginx.conf
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
