--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -15,7 +15,9 @@ services:
   #     context: ./api
   #     dockerfile: ../docker/api/Dockerfile
     volumes:
-      - ./api:/var/www/api
+      # - ./api:/home/benoit/www/api
+      # - /home/${USER}/www/api:/var/www/api
+      - api_volume:/public
     networks:
       - bentoweb_network
     expose:
@@ -52,8 +54,10 @@ services:
     # container_name: skills2025_nginx
     volumes:
       #   - ./api:/var/www/api
-      - /home/${USER}/www/front:/var/www/front
-      - ./nginx:/etc/nginx
+      - api_volume:/var/www/api:ro
+      - /home/${USER}/www/front:/var/www/front:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      # - ./nginx:/etc/nginx
     networks:
       - bentoweb_network
     ports:
