--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -40,7 +40,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
 
-        root /var/www/front;
+        root /home/benoit/www/front;
         index index.html;
 
         location / {
@@ -56,7 +56,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
 
-        root /var/www/api/public;
+        root /home/benoit/www/api;
         index index.php index.html index.htm;
 
         location / {
