--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -56,8 +56,10 @@ services:
       #   - ./api:/var/www/api
       - api_volume:/var/www/api:ro
       - /home/${USER}/www/front:/var/www/front:ro
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      # - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       # - ./nginx:/etc/nginx
+      # - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      # - ./nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - bentoweb_network
     ports:
