--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -56,6 +56,8 @@ services:
       #   - ./api:/var/www/api
       - api_volume:/var/www/api:ro
       - /home/${USER}/www/front:/var/www/front:ro
+      - /home/benoit/www/certs_nginx:/etc/nginx/ssl:ro
+      # - /etc/letsencrypt:/etc/letsencrypt:ro
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       # - ./nginx:/etc/nginx
       # - ./nginx.conf:/etc/nginx/nginx.conf:ro
