--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -27,8 +27,8 @@ http {
         listen 443 ssl default_server;
         server_name _;
 
-        ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         return 404;
     }
@@ -37,8 +37,8 @@ http {
         listen 443 ssl;
         server_name bentoweb.fr;
 
-        ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         root /home/benoit/www/front;
         index index.html;
@@ -53,8 +53,8 @@ http {
         listen 443 ssl;
         server_name api.bentoweb.fr;
 
-        ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         root /home/benoit/www/api;
         index index.php index.html index.htm;
