test github actions build&deploy #69

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -11,9 +11,9 @@ services:
       # MYSQL_USER: ${MYSQL_USER}
       # MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       DATABASE_URL: "mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:3306/${MYSQL_DATABASE}?serverVersion=8.0.32&charset=utf8mb4"
-  #   build:
-  #     context: ./api
-  #     dockerfile: ../docker/api/Dockerfile
+    #   build:
+    #     context: ./api
+    #     dockerfile: ../docker/api/Dockerfile
     volumes:
       # - ./api:/home/benoit/www/api
       # - /home/${USER}/www/api:/var/www/api
@@ -28,24 +28,24 @@ services:
   # front:
   #   container_name: skills2025-front
   #   image: ghcr.io/bentoweb-fr/skills2025-front:latest
-    # build:
-    #   context: ./front
-    #   dockerfile: ../docker/front/Dockerfile
-    # volumes:
-      # - ./front:/var/www/front
-      # - /var/www/front:/var/www/front
-      # - ./:/var/www/front
-    # environment:
-      # PUID: 1000
-      # PGID: 1000
-      # NODE_ENV: prod
+  # build:
+  #   context: ./front
+  #   dockerfile: ../docker/front/Dockerfile
+  # volumes:
+  # - ./front:/var/www/front
+  # - /var/www/front:/var/www/front
+  # - ./:/var/www/front
+  # environment:
+  # PUID: 1000
+  # PGID: 1000
+  # NODE_ENV: prod
   #     VITE_API_URL: https://api.skills2025.local
   #     SHELL: /bin/ash # Fix chokidar-cli error
-    # restart: unless-stopped
-    # networks:
-    #   - bentoweb_network
-    # ports:
-    #   - "3000:3000"
+  # restart: unless-stopped
+  # networks:
+  #   - bentoweb_network
+  # ports:
+  #   - "3000:3000"
 
   nginx:
     image: ghcr.io/bentoweb-fr/skills2025-nginx:latest
@@ -56,12 +56,12 @@ services:
       #   - ./api:/var/www/api
       - api_volume:/var/www/api:ro
       - /home/${USER}/www/front:/var/www/front:ro
-      - /home/benoit/www/certs_nginx:/etc/nginx/ssl:ro
-      # - /etc/letsencrypt:/etc/letsencrypt:ro
-      # - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      # - ./nginx:/etc/nginx
-      # - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      # - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /home/${USER}/www/certs:/etc/nginx/ssl:ro
+    # - /etc/letsencrypt:/etc/letsencrypt:ro
+    # - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    # - ./nginx:/etc/nginx
+    # - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    # - ./nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - bentoweb_network
     ports:
@@ -69,7 +69,7 @@ services:
       - "443:443"
     depends_on:
       - api
-      # - front
+  # - front
 
   mysql:
     image: mysql:8.0
