--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -6,10 +6,10 @@ events {
 
 http {
     # include       mime.types;
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-    sendfile      on;
-    keepalive_timeout  65;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 65;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -41,10 +41,11 @@ http {
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         root /home/benoit/www/front;
-        index index.html;
+        index index.html index.htm;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            # try_files $uri $uri/ /index.html;
+            try_files $uri /index.html$is_args$args;
         }
 
     }
