--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -44,8 +44,13 @@ http {
         index index.html index.htm;
 
         location / {
-            # try_files $uri $uri/ /index.html;
-            try_files $uri /index.html$is_args$args;
+            try_files $uri $uri/ /index.html;
+            # try_files $uri /index.html$is_args$args;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
         }
 
     }
