--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -40,11 +40,11 @@ http {
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-        root /home/benoit/www/front;
+        root /var/www/front;
         index index.html index.htm;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html =404;
             # try_files $uri /index.html$is_args$args;
         }
 
@@ -62,8 +62,8 @@ http {
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-        root /home/benoit/www/api;
-        index index.php index.html index.htm;
+        # root /var/www/api;
+        # index index.php index.html index.htm;
 
         location / {
             try_files $uri /index.php$is_args$args;
