--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -34,6 +34,12 @@ http {
     }
 
     server {
+        listen 80;
+        server_name bentoweb.fr;
+        return 301 https://$server_name$request_uri;
+    }
+
+    server {
         listen 443 ssl;
         server_name bentoweb.fr;
 
@@ -56,18 +62,24 @@ http {
     }
 
     server {
+        listen 80;
+        server_name api.bentoweb.fr;
+        return 301 https://$server_name$request_uri;
+    }
+
+    server {
         listen 443 ssl;
         server_name api.bentoweb.fr;
 
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-        # root /var/www/api;
-        # index index.php index.html index.htm;
+        root /var/www/api/public;
+        index index.php index.html index.htm;
 
-        location / {
-            try_files $uri /index.php$is_args$args;
-        }
+        # location / {
+        #     try_files $uri /index.php$is_args$args;
+        # }
 
         location ~ ^/index\.php(/|$) {
             fastcgi_pass api:9000;
