--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,9 +59,9 @@ http {
         root /var/www/api/public;
         index index.php index.html index.htm;
 
-        location / {
-            try_files $uri /index.php$is_args$args;
-        }
+        # location / {
+        #     try_files $uri /index.php$is_args$args;
+        # }
 
         location ~ ^/index\.php(/|$) {
             fastcgi_pass api:9000;
