--- a/docker/api/Dockerfile-CI
+++ b/docker/api/Dockerfile-CI
@@ -20,4 +20,9 @@ RUN apt-get update && apt-get install -y \
 # ???
 WORKDIR /var/www/api
 
-RUN php bin/console doctrine:migrations:migrate
+# RUN php bin/console doctrine:migrations:migrate
+
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["php-fpm"]
