--- a/docker/api/Dockerfile-CI
+++ b/docker/api/Dockerfile-CI
@@ -22,7 +22,8 @@ WORKDIR /var/www/api
 
 # RUN php bin/console doctrine:migrations:migrate
 
-COPY entrypoint.sh /entrypoint.sh
+# COPY entrypoint.sh /entrypoint.sh
+COPY ../docker/api/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["php-fpm"]
