--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -44,6 +44,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Entrypoint script
+        run: |
+          mv ../docker/api/entrypoint.sh /entrypoint.sh
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
