--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Entrypoint script
         run: |
-          mv ../docker/api/entrypoint.sh /entrypoint.sh
+          cp ../docker/api/entrypoint.sh entrypoint.sh
       - name: Login GHCR 
         uses: docker/login-action@v3
         with:
