--- a/.github/actions/ssh-setup/action.yml
+++ b/.github/actions/ssh-setup/action.yml
@@ -8,6 +8,9 @@ inputs:
   ssh-host:
     description: 'SSH host'
     required: true
+  ssh-user:
+    description: 'SSH user'
+    required: true
 
 runs:
   using: "composite"
@@ -15,7 +18,32 @@ runs:
     - name: Configure SSH
       shell: bash
       run: |
-        eval $(ssh-agent -s)
-        ssh-add - <<< "${{ inputs.ssh-private-key }}"
+        # Create SSH directory with proper permissions
         mkdir -p ~/.ssh
-        ssh-keyscan -H ${{ inputs.ssh-host }} >> ~/.ssh/known_hosts
+        chmod 700 ~/.ssh
+        
+        # Add SSH private key (decode if base64 encoded)
+        echo "${{ inputs.ssh-private-key }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        
+        # Create SSH config for the host
+        cat >> ~/.ssh/config << EOF
+        Host ${{ inputs.ssh-host }}
+          HostName ${{ inputs.ssh-host }}
+          User ${{ inputs.ssh-user }}
+          IdentityFile ~/.ssh/id_rsa
+          StrictHostKeyChecking no
+          UserKnownHostsFile ~/.ssh/known_hosts
+        EOF
+        chmod 600 ~/.ssh/config
+        
+        # Start SSH agent and add key
+        eval $(ssh-agent -s)
+        ssh-add ~/.ssh/id_rsa
+        
+        # Add host to known_hosts
+        ssh-keyscan -H ${{ inputs.ssh-host }} >> ~/.ssh/known_hosts 2>/dev/null || true
+        chmod 644 ~/.ssh/known_hosts
+        
+        # Test SSH connection
+        ssh -o ConnectTimeout=10 -o BatchMode=yes ${{ inputs.ssh-user }}@${{ inputs.ssh-host }} "echo 'SSH connection successful'"
