--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -43,6 +43,12 @@ services:
       - "9000"
     depends_on:
       - mysql
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 9000 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # front:
   #   container_name: skills2025-front
@@ -87,7 +93,8 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      - api
+      api:
+        condition: service_healthy
 
   # phpmyadmin:
   #   image: phpmyadmin:5.2.1
