--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -14,6 +14,14 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    # Resolver pour Docker
+    resolver 127.0.0.11 valid=30s;
+
+    # Upstream pour PHP-FPM
+    upstream php_backend {
+        server api:9000 max_fails=3 fail_timeout=30s;
+    }
+
     # Par défaut, si aucun domaine ne correspond, on renvoie une 404
     server {
         listen 80 default_server;
@@ -82,7 +90,7 @@ http {
         # }
 
         location ~ ^/index\.php(/|$) {
-            fastcgi_pass api:9000;
+            fastcgi_pass php_backend;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
