--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -44,11 +44,6 @@ services:
     depends_on:
       - mysql
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 9000 || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
   # front:
   #   container_name: skills2025-front
@@ -93,8 +88,7 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      api:
-        condition: service_healthy
+      - api
 
   # phpmyadmin:
   #   image: phpmyadmin:5.2.1
