--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -20,6 +20,7 @@ http {
     # Upstream pour PHP-FPM
     upstream php_backend {
         server api:9000 max_fails=3 fail_timeout=30s;
+        keepalive 2;
     }
 
     # Par défaut, si aucun domaine ne correspond, on renvoie une 404
@@ -90,11 +91,15 @@ http {
         # }
 
         location ~ ^/index\.php(/|$) {
+            try_files $uri =404;
             fastcgi_pass php_backend;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             fastcgi_param DOCUMENT_ROOT $realpath_root;
+            fastcgi_connect_timeout 60s;
+            fastcgi_send_timeout 60s;
+            fastcgi_read_timeout 60s;
             internal;
         }
 
