--- a/docker/api/Dockerfile-CI
+++ b/docker/api/Dockerfile-CI
@@ -9,19 +9,36 @@ RUN apt-get update && apt-get install -y \
     zip \
     libzip-dev \
     unzip \
+    curl \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install intl pdo pdo_mysql mysqli gd zip gd exif \
     && docker-php-ext-enable pdo_mysql gd exif
 
-# Donne les droits d'écriture dans le dossier
-# RUN chown -R www-data:www-data /var/www/html
-# RUN chmod -R 777 /var/www/html
+# Installer Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# ???
-# WORKDIR /var/www/api
+# Définir le répertoire de travail
+WORKDIR /var/www/api
 
-# RUN php bin/console doctrine:migrations:migrate
+# Copier d'abord composer.json et composer.lock pour optimiser le cache Docker
+COPY composer.json composer.lock ./
 
+# Installer les dépendances PHP (optimisation du cache)
+RUN composer install --no-dev --optimize-autoloader --no-interaction --no-scripts
+
+# Copier tous les fichiers de l'application
+COPY . .
+
+# Réexécuter composer pour les scripts post-install
+RUN composer dump-autoload --optimize
+
+# Définir les permissions
+RUN chown -R www-data:www-data /var/www/api
+RUN chmod -R 755 /var/www/api
+
+# Copier et configurer l'entrypoint
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+
 ENTRYPOINT ["/entrypoint.sh"]
+CMD ["php-fpm"]
