test github actions build&deploy #83

--- a/docker/api/Dockerfile-CI
+++ b/docker/api/Dockerfile-CI
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     libzip-dev \
     unzip \
     curl \
+    default-mysql-client \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install intl pdo pdo_mysql mysqli gd zip gd exif \
     && docker-php-ext-enable pdo_mysql gd exif
