--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -86,9 +86,9 @@ http {
         root /var/www/api/public;
         index index.php index.html index.htm;
 
-        # location / {
-        #     try_files $uri /index.php$is_args$args;
-        # }
+        location / {
+            try_files $uri /index.php$is_args$args;
+        }
 
         location ~ ^/index\.php(/|$) {
             try_files $uri =404;
