--- a/api/.env.prod
+++ b/api/.env.prod
@@ -3,9 +3,9 @@
 APP_SECRET=74cd4853af4952bc44f81a204c4936a0
 ###< symfony/framework-bundle ###
 
-APP_ENV=dev
-APP_DEBUG=1
+APP_ENV=prod
+APP_DEBUG=0
 
-DATABASE_URL="mysql://skills:password@mysql:3306/skills2025?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://skills:password@mysql:3306/skills2025?serverVersion=8.0.32&charset=utf8mb4"
 
 # PROD MYSQL ROOT PASS : gwr!^HfttnMy!7w8R80Xh8yj
