test github actions build&deploy #90

--- a/api/.env.prod
+++ b/api/.env.prod
@@ -4,7 +4,7 @@ APP_SECRET=74cd4853af4952bc44f81a204c4936a0
 ###< symfony/framework-bundle ###
 
 APP_ENV=prod
-APP_DEBUG=0
+APP_DEBUG=false
 
 # DATABASE_URL="mysql://skills:password@mysql:3306/skills2025?serverVersion=8.0.32&charset=utf8mb4"
 
